Fix layout issues and black sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 
-html, body, #root, #mainroot {
+html, body, #root {
   width: 100%;
   min-height: 100vh;
   margin: 0;
